src/db/resources/vpc/security-groups/rds-security-group.json
{
  "DBAccessSecurityGroup": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupName": {
        "Fn::Sub": "${AWS::StackName}-InstanceAccess-SG"
      },
      "GroupDescription": "Security group for Apps ACCESS to the RDS Cluster",
      "VpcId": {
        "Fn::ImportValue": {
          "Fn::Sub": "${ParamNetworkStackName}-VPCId"
        }
      },
      "Tags": [{
          "Key": "Name",
          "Value": {
            "Fn::Sub": "${AWS::StackName}-InstanceAccess-SG"
          }
        },
        {
          "Key": "Owner",
          "Value": {
            "Ref": "ParamAuthorName"
          }
        }
      ]
    }
  },
  "DBSecurityGroup": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupName": {
        "Fn::Sub": "${AWS::StackName}-AdminAccess-SG"
      },
      "GroupDescription": "Security group for RDS Cluster admin access",
      "VpcId": {
        "Fn::ImportValue": {
          "Fn::Sub": "${ParamNetworkStackName}-VPCId"
        }
      },
      "Tags": [{
          "Key": "Name",
          "Value": {
            "Fn::Sub": "${AWS::StackName}-AdminAccess-SG"
          }
        },
        {
          "Key": "Owner",
          "Value": {
            "Ref": "ParamAuthorName"
          }
        }
      ],
      "SecurityGroupIngress": [{
          "IpProtocol": "tcp",
          "FromPort": "3306",
          "ToPort": "3306",
          "SourceSecurityGroupId": {
            "Fn::ImportValue": {
              "Fn::Sub": "${ParamNetworkStackName}-BastionSecurityGroup"
            }
          }
        },
        {
          "IpProtocol": "tcp",
          "FromPort": "3306",
          "ToPort": "3306",
          "SourceSecurityGroupId": {
            "Ref": "DBAccessSecurityGroup"
          }
        }
      ]
    }
  }
}
